# CLEAR-evaluator

./: README.md  __init__.py  main.py  pyproject.toml
feature/configs/: models.py
feature/processor/: AzureOpenAI.py  eval.py  vLLM.py
label/configs/: models.py  prompts.py
label/processor/: AzureOpenAI.py  eval.py  vLLM.py
