[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clear-evaluator"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools]
packages = [
    "clear_evaluator",
    "clear_evaluator.label",
    "clear_evaluator.label.configs",
    "clear_evaluator.label.processor",
    "clear_evaluator.feature",
    "clear_evaluator.feature.configs",
    "clear_evaluator.feature.processor",
]

[tool.setuptools.package-dir]
"clear_evaluator" = "."
